--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -247,6 +247,7 @@
       domReady: function() {
         var self = this;
         var onReady = function(e) {
+          console.log(e);
           console.log("PUBLISHING TIME");
           self.pubnub = e.detail;
           var ready = function() {
