Added detached removal for subsccriptions

--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -234,6 +234,13 @@
             channel: this.channel    
           });
         }
+      },
+      detached: function() {
+        if (subscribe) {
+          this.pubnub.unsubscribe({
+            channel: this.channel
+          });
+        }
       }
     });
   </script>
