--- a/demo-element.html
+++ b/demo-element.html
@@ -1,10 +1,12 @@
 <link rel="import" href="bower_components/polymer/polymer.html"> 
 <link rel="import" href="pubnub-element.html">
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+
 <polymer-element name="list-data">
 <template>
 <core-pubnub publish_key="pub-c-0236c7bb-a942-4ffd-93fe-c60380d89611" subscribe_key="sub-c-b969ffd2-2707-11e4-a114-02ee2ddab7fe" uuid="time of my pie">
 
-<core-pubnub-subscribe channel="what" messages="{{msgs}}" presence="{{presents}}" subscribe="true">
+<core-pubnub-subscribe id="sub" channel="what" messages="{{msgs}}" presence="{{presents}}" subscribe="true">
 <core-pubnub-publish channel="what" message="1">
 <core-pubnub-publish channel="what" message="2">
 <core-pubnub-publish channel="what" message="3">
