Basic PubNub docs

--- a/demo-element.html
+++ b/demo-element.html
@@ -10,6 +10,8 @@
 <core-pubnub-publish channel="what" message="1">
 <core-pubnub-publish channel="what" message="2">
 <core-pubnub-publish channel="what" message="3">
+<core-pubnub-publish id="pub" channel="what" message="nesting works">
+</core-pubnub-publish>
 </core-pubnub-publish>
 </core-pubnub-publish>
 </core-pubnub-publish>
