--- a/demo.html
+++ b/demo.html
@@ -12,16 +12,18 @@
 </head>
 <body >
 <h1>TESTING</h1><hr><hr>
-<!--
+<!--  
   <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
-    <core-pubnub-subscribe channel="what" id="sub">
+  <core-pubnub-subscribe channel="what" id="sub">
       <core-pubnub-publish channel="what" id="pub" message='["wat", "DAH" ]'>
+        <core-pubnub-publish channel="what" id="pub" message="lol">
+        </core-pubnub-publish>
       </core-pubnub-publish>
     </core-pubnub-subscribe>
     <core-pubnub-history channel="what" id="hist">
     </core-pubnub-history>
   </core-pubnub>
-  -->
+-->
   <list-data></list-data>
 <!--  
   <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
