--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <!--
   <script src="../platform/platform.js"></script>
   <link rel="import" href="../polymer/polymer.html">
   <link rel="import" href="../core-component-page/core-component-page.html">
+  -->
+  <script src="bower_components/platform/platform.js"></script>
+  <link rel="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="bower_components/core-component-page/core-component-page.html">
 
 </head>
 <body unresolved>
 
-  <core-component-page></core-component-page>
+  <core-component-page sources='["pubnub-element.html"]'></core-component-page>
 
 </body>
 </html>
