--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -1,6 +1,12 @@
 <link rel="import" href="bower_components/polymer/polymer.html"> 
 
 <!--
+Element that initializes PubNub.
+
+##### Example
+
+    <core-pubnub publish_key="demo" subscribe_key="demo" uuid="alice"></core-pubnub>
+
 @element core-pubnub
 @blurb Element providing encapsulation of the PubNub JS SDK.
 @status alpha
@@ -13,8 +19,8 @@
 
     Polymer('core-pubnub', {
       /**
-        * The 'publish_key' attribute sets the publish_key to be used for publishing messages to a channel.
-        * REQUIRED
+        * The `publish_key` attribute sets the publish_key that will be used when publishing messages to a channel.
+        * **REQUIRED**
         *
         * @attribute publish_key
         * @type string
@@ -23,8 +29,8 @@
       publish_key: '',
 
       /**
-        * The 'subscribe_key' attribute sets the subscribe_key to be used for subscribing to a channel.
-        * REQUIRED
+        * The `subscribe_key` attribute sets the subscribe_key that will be used when subscribing to a channel.
+        * **REQUIRED**
         *
         * @attribute subscribe_key
         * @type string
@@ -33,8 +39,8 @@
       subscribe_key: '',
 
       /**
-        * The 'auth_key' attribute sets the auth_key to be used for determining User-Level Access Manager permissions.
-        * OPTIONAL
+        * The `auth_key` attribute sets the auth_key to be used for determining User-Level Access Manager permissions.
+        * **OPTIONAL**
         *
         * @attribute auth_key 
         * @type string
@@ -43,8 +49,8 @@
       auth_key: undefined,
       
       /**
-        * The 'uuid' attribute sets the unique user id to be used to identify the client. By default a randomly generated uuid is created by the client.
-        * OPTIONAL
+        * The `uuid` attribute sets the unique user id to be used to identify the client. By default a randomly generated uuid is created by the client.
+        * **OPTIONAL**
         *
         * @attribute uuid
         * @type string
@@ -53,8 +59,8 @@
       uuid: undefined,
 
       /**
-        * The 'cipher_key' attribute sets the cryptographic key to use for message level encryption with AES.
-        * OPTIONAL
+        * The `cipher_key` attribute sets the cryptographic key to use for message level encryption with AES.
+        * **OPTIONAL**
         *
         * @attribute cipher_key
         * @type string
@@ -63,8 +69,8 @@
       cipher_key: undefined,
 
       /**
-        * The 'noleave' attribute, when set to true, explicitly disables presence leave events.
-        * OPTIONAL
+        * The `noleave` attribute, when set to true, explicitly disables presence leave events.
+        * **OPTIONAL**
         *
         * @attribute noleave
         * @type boolean
@@ -73,8 +79,8 @@
       noleave: undefined,
 
       /**
-        * The 'keepalive' attribute sets the interval betwween keepalive pings.
-        * OPTIONAL
+        * The `keepalive` attribute sets the interval betwween keepalive pings.
+        * **OPTIONAL**
         *
         * @attribute keepalive 
         * @type number
@@ -83,8 +89,8 @@
       keepalive: undefined,
 
       /**
-        * The 'secret_key' attribute sets the secret_key used only to sign Access Manager API messages.
-        * OPTIONAL
+        * The `secret_key` attribute sets the secret_key used only to sign Access Manager API messages.
+        * **OPTIONAL**
         *
         * @attribute secret_key
         * @type string
@@ -93,8 +99,8 @@
       secret_key: undefined,
 
       /**
-        * The 'ssl' attribute, when set to true, enables transport layer encryption with SSL/TLS. 
-        * OPTIONAL
+        * The `ssl` attribute, when set to true, enables transport layer encryption with SSL/TLS. 
+        * **OPTIONAL**
         *
         * @attribute ssl 
         * @type boolean
@@ -103,8 +109,8 @@
       ssl: undefined,
 
       /**
-        * The 'windowing' sets the time interval in milliseconds that PubNub will use to optimize message delivery by bundling them into a single compressed payload.
-        * OPTIONAL
+        * The `windowing` sets the time interval in milliseconds that PubNub will use to optimize message delivery by bundling them into a single compressed payload.
+        * **OPTIONAL**
         *
         * @attribute windowing
         * @type number
@@ -114,7 +120,7 @@
 
       /**
        * The `jsonp` attribute, when set to true, explicitly enforces JSON(P) as the data transport method.
-       * OPTIONAL 
+        * **OPTIONAL**
        *
        * @attribute jsonp
        * @type boolean
@@ -151,6 +157,12 @@
 
 </polymer-element>
 
+<!--
+@element core-pubnub-subscribe
+@blurb Element providing encapsulation of the PubNub JS SDK.
+@status alpha
+@homepage 
+-->
 <polymer-element name="core-pubnub-subscribe" hidden attributes="channel windowing heartbeat state messages presence subscribe pubnub done">
   <script>
     Polymer('core-pubnub-subscribe', {
@@ -276,7 +288,6 @@
           });
           self.parentNode.removeEventListener('ready', onReady);
         }
-        // console.log(this.parentNode);
         if (this.parentNode.done) {
           onReady({detail: this.parentNode.pubnub});
         }
@@ -284,6 +295,21 @@
           this.parentNode.addEventListener('ready', onReady);
         }
       },
+      publish: function() {
+        this.pubnub.publish({
+          channel: this.channel,
+          message: this.message,
+          publish_key: this.publish_key,
+          callback: function(m) {
+            self.fire('callback', m);
+            ready();
+          },
+          error: function(m) {
+            self.fire('error', m);
+            ready();
+          }
+        });
+     },
     });
   </script>
 </polymer-element>
