--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -1,9 +1,9 @@
 <link rel="import" href="bower_components/polymer/polymer.html"> 
 
 <!--
-Element that initializes PubNub.
+This element initializes the PubNub client. This element must be created before attempting to utilize any other PubNub Polymer elements in order to establih account level credentials such as `publish_key` and `subscribe_key`, set `origin` server as well as any optional configurations such as `uuid`.
 
-### Example
+### Basic Usage:
 
     <core-pubnub publish_key="demo" subscribe_key="demo"></core-pubnub>
 
@@ -12,7 +12,7 @@ Element that initializes PubNub.
 @status alpha
 @homepage 
 -->
-<polymer-element name="core-pubnub" hidden constructor="corePubNub" attributes="publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp done pubnub">
+<polymer-element name="core-pubnub" hidden constructor="corePubNub" attributes="publish_key subscribe_key auth_key origin uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp done pubnub">
   <script src="https://cdn.pubnub.com/pubnub.js"></script>
 
   <script>
@@ -22,7 +22,7 @@ Element that initializes PubNub.
         * **REQUIRED**
         *
         * @attribute publish_key
-        * @type string
+        * @type String
         * @default ''
         */
       publish_key: '',
@@ -32,7 +32,7 @@ Element that initializes PubNub.
         * **REQUIRED**
         *
         * @attribute subscribe_key
-        * @type string
+        * @type String
         * @default ''
         */
       subscribe_key: '',
@@ -42,7 +42,15 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute auth_key 
-        * @type string
+        * @type String
+        * @default undefined
+        */
+
+      /**
+        * The `origin` attribute specifies the URL of the PubNub server you are connecting to.
+        *
+        * @attribute origin
+        * @type String
         * @default undefined
         */
       
@@ -51,7 +59,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute uuid
-        * @type string
+        * @type String
         * @default undefined
         */
 
@@ -60,7 +68,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute cipher_key
-        * @type string
+        * @type String
         * @default undefined
         */
 
@@ -69,7 +77,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute noleave
-        * @type boolean
+        * @type Boolean
         * @default false
         */
 
@@ -78,7 +86,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute keepalive 
-        * @type number
+        * @type Number
         * @default 60
         */
 
@@ -87,7 +95,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute secret_key
-        * @type string
+        * @type String
         * @default undefined 
         */
 
@@ -96,7 +104,7 @@ Element that initializes PubNub.
         * **OPTIONAL**
         *
         * @attribute ssl 
-        * @type boolean
+        * @type Boolean
         * @default false
         */
 
